<resources>
    <string name="app_name">AKV</string>
    <string name="launcher">Launcher</string>
    <string name="login">Авторизоваться</string>
    <string name="auth_token">auth_token</string>
    <string name="password_reset_info">We\'ve emailed you instructions for setting your password. If an account exists
        with the email you entered.
        You should receive them shortly.If you don\'t receive an email, please make sure you\'ve entered the address you
        registered with,
        and check your spam folder.
    </string>
    <string name="custom_dialog_text_location">Выберите ваше \n местоположение</string>
    <string name="not_supported">Данная функция не поддерживается</string>
    <string name="light">Светлый</string>
    <string name="gps_not_active">Передача данных о местоположении не активна</string>
    <string name="gps_question">Включить передачу геоданных?</string>
    <string name="gps_impossible">Передача данных через GPS невозможна</string>
    <string name="gps_try_network">Попробуйте включить передачу геоданных через мобильные сети и Wi-Fi</string>
    <string name="gps_question_click">Вы действительно хотите открыть настройки местоположения?</string>
    <string name="permission_text">Данное разрешение требуется для корректной работы</string>
    <string name="action_delete">Удалять</string>
    <string name="action_copy">Копировать</string>
    <string name="copied_message">Сообщение скопировано!</string>
    <string name="hint_enter_a_message">Введите сообщение…</string>
    <string name="password_reset_email_sent">Пароль сброшен, письмо отправлено</string>
    <string name="return_to_launcher_fragment">Return</string>
    <string name="text_error">Ошибка</string>
    <string name="text_success">Успешно</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="email_field">Email</string>
    <string name="field_password">Password</string>
    <string name="field_login">Login</string>
    <string name="field_username">Username</string>
    <string name="field_confirm_password">Подтвердите пароль</string>
    <string name="field_register">Register</string>
    <string name="network_error_response">Error</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="my_blogs">My Blogs</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="fragment_create_blog">Create</string>
    <string name="fragment_update_blog">Update</string>
    <string name="fragment_view_blog">View</string>
    <string name="fragment_account">Account</string>
    <string name="fragment_change_password">Change password</string>
    <string name="fragment_blog">Blog</string>
    <string name="save_changes">Save changes</string>
    <string name="fragment_update_account">Обновить аккаунт</string>
    <string name="arg_email">arg_email</string>
    <string name="arg_username">arg_username</string>
    <string name="enter_a_username">Введите имя пользователя</string>
    <string name="enter_your_email">Введите адрес электронной почты</string>
    <string name="current_password">Текущий пароль</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="change_password">Сменить пароль</string>
    <string name="your_email">Ваш адрес электронной почты</string>
    <string name="your_username">Ваш логин</string>
    <string name="register">Регистрация</string>
    <string name="search">Поиск</string>
    <string name="filter">Фильтр</string>
    <string name="update_password">Обновить пароль</string>
    <string name="filter_asc">ASC</string>
    <string name="filter_desc">DESC</string>
    <string name="filter_author">Author</string>
    <string name="filter_date">Date</string>
    <string name="asc_desc">Ascending or descending order</string>
    <string name="author_or_date">Filter by author or date</string>
    <string name="filter_options">Filter options</string>
    <string name="publish">Публиковать</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="text_yes">да</string>
    <string name="yes">Да</string>
    <string name="are_you_sure_publish">Are you sure you want to publish this?</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this? This can\'t be un-done.</string>
    <string name="text_info">Инфо</string>
    <string name="delete">Удалить</string>
    <string name="akv">AKV</string>
    <string name="enter_account">Войдите в \n аккаунт</string>
    <string name="phone_number_email_enter">Email или номер телефона</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="Sign_in">Войти</string>
    <string name="sign_in_Google">Войти через Google</string>
    <string name="dont_have_account">Все еще нет аккаунта?</string>
    <string name="create_">Создать</string>
    <string name="Enter_phonenumber">Введите свой номер телефона</string>
    <string name="account_exist">Уже есть аккаунт?</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="next">Далее</string>
    <string name="post">Разместить</string>
    <string name="back">Назад</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="put_nickname">Придумайте имя\n пользователя</string>
    <string name="fill_data">Заполните ваши личные данные</string>
    <string name="privacy_term">Нажимая кнопку Создать, вы соглашаетесь с политикой конфеденциальности и правилами пользования.</string>
    <string name="invalid_requirments">Не соответствует требованиям</string>
    <string name="invalid">Заполните поле</string>
    <string name="invalid_number">Неправильный номер телефона</string>
    <string name="invalid_pass">Пароли не совпадают</string>
    <string name="enter_email_for_rest">Введите email  для восстановления  пароля</string>
    <string name="we_will_send_verific">Мы отправим на вашу электронную почту \n6-значный код, с помощью которого вы сможете \nвосстановить доступ к вашему аккаунту.</string>
    <string name="we_will_send_verific_phone">Мы отправим на ваш номер телефона \n6-значный код, с помощью которого вы сможете \nвосстановить доступ к вашему аккаунту.</string>
    <string name="email">Email</string>
    <string name="send_code">Отправить код</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="enter">Войти</string>
    <string name="confiden_politics">Политика  конфидециальности</string>
    <string name="thanks_for_choose">Спасибо, что выбрали нас!</string>
    <string name="dump_text">Quisque eget rutrum nulla, non lacinia ligula. Phasellus sodales elementum auctor. Nullam ullamcorper mattis purus eu mattis. Nam vel cursus tellus, venenatis posuere orci.</string>
    <string name="your_pricate_data">Ваши личные данные</string>
    <string name="savings">Сохраненные</string>
    <string name="any_questions">Есть вопросы? Обратитесь в Службу поддержки</string>
    <string name="enter_receive_pass">Введите  полученный код</string>
    <string name="example_n1">Пример: 996748</string>
    <string name="recover_password">Восстановить пароль</string>
    <string name="i_dont_have_code">Мне не пришло сообщение с кодом.</string>
    <string name="send_again">Отправить ещё раз</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email_">Электронная почта</string>
    <string name="birth_date">День рождение</string>
    <string name="dd_mm_yyyy">ГГГГ-ММ-ДД</string>
    <string name="gender">Ваш пол</string>
    <string name="F">Ж</string>
    <string name="M">M</string>
    <string name="nickname">Имя пользователя</string>
    <string name="rules_for_using_app">Правила  пользования  приложением AKV.KZ</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="services">Услуги</string>
    <string name="or">или</string>
    <string name="last_name">Имя</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_search">Search</string>
    <string name="bottom_menu_messages">Messages</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_favorite">Favorite</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="dates">Даты</string>
    <string name="guests">Гости</string>
    <string name="by_map">На карте</string>
    <string name="search_result">Результаты поиска “Отели”</string>
    <string name="hotels">Отели</string>
    <string name="favourite_eng">favourite</string>
    <string name="export_eng">export</string>
    <string name="another_one">Другой способ</string>
    <string name="enter_phone_number">Введите свой \nномер телефона</string>
    <string name="validate_phonenumber">Подтвердите \nномер телефона</string>
    <string name="we_send_code_12">Мы отправили на ваш номер \n6-значный код. Введите его для \nподтверждения вашего номера</string>
    <string name="validate">Подтвердить</string>
    <string name="code_is_not_right">Код подтверждения неверен. \nВведите ещё раз.</string>
    <string name="book">Забранировать</string>
    <string name="rating_defaul">4.6 (375)</string>
    <string name="price_default">6000kzt/ночь</string>
    <string name="house_rules">Правила дома</string>
    <string name="cancel_rules">Правила отмены</string>
    <string name="available_dates">Свободные даты</string>
    <string name="recommendations">Рекомендаций</string>
    <string name="random_address">г. Алматы, пр. Аль-Фараби 67/2</string>
    <string name="address">Адрес</string>
    <string name="comments">Отзывы</string>
    <string name="random_string">В Алмате однако забывать, что начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки модели развития по формированию позиции представляет собой интересный эксперимент проверки модели развития.</string>
    <string name="random_location">– Алматы, Казахстан</string>
    <string name="random_hotel">Hotel Del Luxe</string>
    <string name="host">Хозяин</string>
    <string name="random_name">\@mukushevaaliya</string>
    <string name="password_requierments">Пароль должен состоять минимум из 8\n символов и содержать минимум одну большую\n букву и одну маленькую букву</string>
    <string name="cheked_text">Формированию позиции представляет собой \nинтересный эксперимент проверки модели развития.</string>
    <string name="save">Сохранить</string>
    <string name="drop_all">Сбросить все</string>
    <string name="cancel">Отменить</string>
    <string name="filter_">Фильтры</string>
    <string name="liked_">liked</string>
    <string name="liked_description">Сохраняйте понравившиеся вам жилья в одном месте, нажав на сердечку на любом жилье.</string>
    <string name="find_appartment">Найти жильё</string>
    <string name="my_booking">Мои \nбронирования</string>
    <string name="random_trips">0 поездки</string>
    <string name="random_guests5">0 гостей</string>
    <string name="dot">•</string>
    <string name="booking_check_stantard_text">Бронируйте места в жильё и проводите свои лучшие время с нами.</string>
    <string name="book_appartment">Забранировать жильё</string>
    <string name="birth_Date">День рождения:</string>
    <string name="_14_1999">14 Ноября 1999</string>
    <string name="gender_two_dots">Пол:</string>
    <string name="man">Мужской</string>
    <string name="phone_number_tow_dots">Номер телефона:</string>
    <string name="random_phone_number">+7 (708) 675 7823</string>
    <string name="email_two_dots">Email:</string>
    <string name="muratov_d_gmail_com">muratov.d@gmail.com</string>
    <string name="change">Изменить</string>
</resources>