<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">




<item android:id="@+id/nav_search"
    android:title="@string/bottom_menu_search"
    android:icon="@drawable/ic_home_white_24dp"/>

<item android:id="@+id/nav_favorite"
    android:title="@string/bottom_menu_favorite"
    android:icon="@drawable/ic_add_circle_outline_white_24dp"
    />

<item android:id="@+id/nav_home"
    android:title="@string/bottom_menu_home"
    android:icon="@drawable/ic_add_circle_outline_white_24dp"
    />

<item android:id="@+id/nav_messages"
    android:title="@string/bottom_menu_messages"
    android:icon="@drawable/ic_add_circle_outline_white_24dp"
    />

<item android:id="@+id/nav_profile"
    android:title="@string/bottom_menu_profile"
    android:icon="@drawable/ic_account_circle_white_24dp"/>


</menu>