<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dim_24dp"
    android:layout_marginEnd="@dimen/dim_24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dim_16dp"
        android:paddingBottom="@dimen/dim_16dp"
        android:gravity="center_vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/fragment_profile_account_birthdate_lb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/birth_Date"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAlignment="viewStart"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/fragment_profile_account_birthdate_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_14_1999"
            android:textSize="14sp"
            android:textColor="@color/grey6"
            android:textAlignment="viewEnd"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dim_16dp"
        android:paddingBottom="@dimen/dim_16dp"
        android:gravity="center_vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/fragment_profile_account_gender_lb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender_two_dots"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAlignment="viewStart"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/fragment_profile_account_gender_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:textSize="14sp"
            android:textColor="@color/grey6"
            android:textAlignment="viewEnd"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dim_16dp"
        android:paddingBottom="@dimen/dim_16dp"
        android:gravity="center_vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/fragment_profile_account_phonenumber_lb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_tow_dots"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAlignment="viewStart"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/fragment_profile_account_phonenumber_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/random_phone_number"
            android:textSize="14sp"
            android:textColor="@color/grey6"
            android:textAlignment="viewEnd"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dim_16dp"
        android:paddingBottom="@dimen/dim_16dp"
        android:gravity="center_vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/fragment_profile_account_email_lb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_two_dots"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAlignment="viewStart"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/fragment_profile_account_email_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/muratov_d_gmail_com"
            android:textSize="14sp"
            android:textColor="@color/grey6"
            android:textAlignment="viewEnd"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>