<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/dim_32dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_saved_booking_lb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_booking"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_saved_booking_trips_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_trips"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_8dp"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_saved_booking_guets_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_guests5"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/fragment_saved_booking_lb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_24dp"
            android:text="@string/booking_check_stantard_text"
            android:textColor="@color/grey8"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_saved_booking_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_24dp"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_saved_booking_book_more_btn"
        style="@style/BasicOutlinedButton.BottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_appartment"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>