<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header_my_adds_change_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:text="@string/cancel"
        android:textColor="@color/primaryZero"
        android:textSize="15sp"
        android:layout_marginStart="@dimen/dim_8dp"/>

    <TextView
        android:id="@+id/header_my_adds_change_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dim_16dp"
        android:layout_marginBottom="@dimen/dim_16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/change"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/header_my_adds_change_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:fontFamily="@font/montserrat_bold"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:textColor="@color/primaryZero"
        android:textSize="15sp"/>

</FrameLayout>