<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cornerRadius1"
        android:backgroundTint="@color/white"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/dim_16dp"
            android:orientation="vertical">

            <ImageButton
                android:contentDescription="@string/text_cancel"
                android:id="@+id/dialog_sign_up_valid_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel_date_quests"
                android:tint="@color/secondaryFirst"
                style="@style/BasicImageButton"
                android:layout_gravity="start|top"/>

            <TextView
                android:id="@+id/dialog_sign_up_valid_label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/validate_phonenumber"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/dialog_sign_up_valid_label2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/we_send_code_12"
                android:textSize="11sp"
                android:layout_marginTop="10dp"
                android:typeface="normal" />

            <EditText
                android:id="@+id/dialog_sign_up_valid_code_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:minWidth="128dp"
                android:letterSpacing="0.1"
                android:layout_marginTop="@dimen/dim_12dp"
                style="@style/BasicEditText"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dialog_sign_up_valid_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_is_not_right"
                android:textAlignment="center"
                android:visibility="gone"
                android:textSize="9sp"
                android:typeface="normal"
                android:textColor="@color/primaryZero"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_sign_up_valid_btn"
                style="@style/BasicMiniButton"
                android:layout_marginTop="@dimen/dim_12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate"/>

            <TextView
                android:id="@+id/dialog_sign_up_valid_label3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8dp"
                android:text="@string/i_dont_have_code"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="9sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/dialog_sign_up_valid_repeat_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_again"
                android:textAlignment="center"
                android:textSize="9sp"
                android:typeface="normal"
                android:textColor="@color/primaryZero"/>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>