<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up_pass_back_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin1"
        android:layout_marginTop="@dimen/button_margin2"
        android:drawableStart="@drawable/ic_chevron_left_real"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/back"
        android:textSize="@dimen/text_button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin5"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="@dimen/content_margin5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/create_password"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_header1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="43dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_pass_password_l_et"
        style="@style/TextOutlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_pass_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/BasicEditText"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_pass_password_re_l_et"
        style="@style/TextOutlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_pass_password_l_et">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_pass_password_re_et"
            android:layout_width="match_parent"
            android:hint="@string/repeat_password"
            style="@style/BasicEditText"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nickname_next_btn"
        style="@style/BasicButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_pass_password_re_l_et" />

    <TextView
        android:id="@+id/akv_label"
        style="@style/AKV_Label"
        android:text="@string/akv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>