<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:contentDescription="@string/filter"
        android:id="@+id/header_filter_close_ibtn"
        style="@style/BasicImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_marginBottom="@dimen/dim_20dp"
        android:src="@drawable/ic_cancel_filter" />

    <TextView
        android:id="@+id/header_filter_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/filter_"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/header_filter_drop_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/drop_all"
        android:textColor="@color/secondaryFirst"
        android:textSize="11sp"
        android:textStyle="bold"
        android:typeface="normal" />

</FrameLayout>