<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dim_28dp"
    android:layout_marginEnd="@dimen/dim_28dp">

    <ImageView
        android:id="@+id/fragment_saved_pages_empty_heart"
        android:layout_width="@dimen/dim_48dp"
        android:layout_height="@dimen/dim_48dp"
        android:contentDescription="@string/liked_"
        android:scaleType="fitXY"
        android:tint="@color/primaryZero"
        app:srcCompat="@drawable/ic_liked" />

    <TextView
        android:id="@+id/fragment_saved_pages_empty_lb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24dp"
        android:textColor="@color/grey7"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/liked_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_saved_pages_empty_find_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BasicOutlinedButton"
        app:cornerRadius="@dimen/cornerRadius1"
        android:paddingTop="@dimen/dim_12dp"
        android:paddingBottom="@dimen/dim_12dp"
        android:text="@string/find_appartment"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dim_36dp"/>
</LinearLayout>